--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Setup Icons
+        run: flutter pub run flutter_launcher_icons:main
+
       - name: Build Android APK
         run: flutter build apk --release
 
